@@ -1,3 +1,9 @@
+2008-06-05  Ivan frade  <ivan.frade@nokia.com>
+
+	* src/libtracker-db/tracker-db-action.[ch]
+	* src/trackerd/tracker-watcher-inotify.c:
+	(is_delete_event) moved to tracker-db-action
+
 2008-06-05  Ivan Frade  <ivan.frade@nokia.com>
 
 	* src/libtracker-db/tracker-db-file-info.[ch]
